modify: 로직 수정